# hscalendar

./: .dockerignore  .gitattributes  .gitignore  .travis.yml  CommandLine.hs  CustomDay.hs  Dockerfile  HalfDayType.hs  Main.hs  Makefile  Model.hs  ModelFcts.hs  Office.hs  Procfile  README.md  TODO  TimeInDay.hs  flake.nix  hscalendar.cabal  package.yaml  stack.yaml
.github/workflows/: ci.yml
app/: App.hs  CommandLine.hs  Config.hs  CustomDay.hs  DefaultHours.hs  Editor.hs  Main.hs  Parsers.hs  Run.hs
app/RIO/Time/: Extended.hs
cli/: CommandLine.hs  Editor.hs  Main.hs  Run.hs
cli/RIO/Time/: Extended.hs
client/: Main.hs
client/Network/HTTP/Types/Header/: Extended.hs
client/Network/HTTP/Types/Status/: Extended.hs
client/Servant/API/BasicAuth/: Extended.hs
client/Servant/Client/: Extended.hs
elm-generator/: Main.hs  Orphans.hs
frontend/: Makefile  elm-srcs.nix  elm.json  index.html
frontend/src/: Common.elm  HalfDayWidget.elm  Main.elm  NavBar.elm  Request.elm  TimeOfDay.elm
frontend/src/Api/: TimeOfDay.elm
frontend/src/Api/HalfDay/: Extended.elm
frontend/src/Api/IdleDayType/: Extended.elm  Extra.elm
frontend/src/Api/Month/: Extended.elm
frontend/src/Api/OffDayType/: Extended.elm
frontend/src/Api/Office/: Extended.elm  Extra.elm
frontend/src/Api/TimeInDay/: Extended.elm  Extra.elm
frontend/src/Date/: Extended.elm  Extra.elm
frontend/src/Html/Events/: Extended.elm
frontend/src/Http/: Extended.elm
frontend/src/Page/: Day.elm  Month.elm  Projects.elm
servant-cli/: Main.hs  main.hs
servant-test/: greet.hs
server/: Main.hs
src/: DefaultHours.hs  HalfDay.hs  HalfDayType.hs  Idle.hs  IdleDayType.hs  Model.hs  ModelExports.hs  ModelFcts.hs  NewModel.hs  Notes.hs  Office.hs  Project.hs  TimeInDay.hs  Worked.hs
src/App/: API.hs  Api.hs  App.hs  CommandLine.hs  Config.hs  CustomDay.hs  CustomMonth.hs  CustomWeek.hs  DayDesc.hs  Editor.hs  MonthDesc.hs  WeekDesc.hs  WorkOption.hs
src/Db/: DayF.hs  FullDay.hs  FullWeek.hs  HalfDay.hs  Idle.hs  IdleDayType.hs  Login.hs  Model.hs  Month.hs  MonthF.hs  Notes.hs  Off.hs  OffDayType.hs  Office.hs  Password.hs  Project.hs  Stats.hs  TimeInDay.hs  Week.hs  WeekF.hs  Worked.hs
src/Db/Internal/: Convert.hs  DBHalfDayType.hs  DBModel.hs
src/Formatting/: Extended.hs
src/Internal/: Convert.hs  DBHalfDayType.hs  DBModel.hs  HalfDayType.hs  Model.hs
src/RIO/Text/: Extended.hs
src/RIO/Time/: Extended.hs
src/Servant/API/: Extended.hs
test/: Spec.hs
users/: Main.hs
